@startuml
title ZScore Class Diagram (for TS and PHP)

abstract AbstractPlacard {
    firstTeam : AbstractTeam
    secondTeam : AbstractTeam
    logEvents : List<AbstractEvent>
    isFinished : Boolean
    sport : String
}

class VolleyballPlacard {
    firstTeam : VolleyballTeam
    secondTeam : VolleyballTeam
    setRes : List<Pair<Int, Int>>
    currentSet : Int
    currentSetRes : Pair<Int, Int>
    availableTimeOuts : Pair<Int, Int>
    isTimeOut : Boolean
    sport = "Volleyball"
}
class FutsalPlacard {
    firstTeam : FutsalTeam
    secondTeam : FutsalTeam
    currentRes : Pair<Int, Int>
    numberFouls : Pair<Int, Int>
    availableTimeOuts : Pair<Int, Int>
    isTimeOut : Boolean
    isTimeStopped : Boolean
    sport = "Futsal"
}

abstract AbstractTeam {
    players : Set<AbstractPlayer>
    sport : String
    name : String
    logoURL : String
}

class VolleyballTeam {
    sport = "Volleyball"
}
class FutsalTeam {
    sport = "Futsal"
}

abstract AbstractPlayer {
    name : String
    position : String
    number : Int
    sport : String
    team : AbstractTeam
}

class VolleyballPlayer {
    sport = "Volleyball"
}
class FutsalPlayer {
    sport = "Futsal"
}

abstract AbstractEvent {
    time : Int
    sport : String
}

class CardEvent {
    player : AbstractPlayer
    cardColor : String
}

class PointEvent {
    player : AbstractPlayer
}

class SubstitutionEvent {
    playerIn : AbstractPlayer
    playerOut : AbstractPlayer
}

AbstractPlacard <|.. VolleyballPlacard
AbstractPlacard <|.. FutsalPlacard

AbstractTeam <|.. VolleyballTeam
AbstractTeam <|.. FutsalTeam

AbstractPlayer <|.. VolleyballPlayer
AbstractPlayer <|.. FutsalPlayer

AbstractEvent <|.. CardEvent
AbstractEvent <|.. PointEvent
AbstractEvent <|.. SubstitutionEvent

VolleyballPlacard ..> VolleyballTeam : "creates"
FutsalPlacard ..> FutsalTeam : "creates"

AbstractPlacard -right- AbstractEvent : "has"

VolleyballTeam -- VolleyballPlayer : "has"
FutsalTeam -- FutsalPlayer : "has"

@enduml